--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -43,6 +43,8 @@
       Tu navegador no soporta la reproducción de videos.
     </video>
 
+     <src source src="manzana.jpeg">
+    
     <!-- JavaScript para mostrar la hora actual en formato español -->
     <script>
       function updateTime() {
