--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>¡Feliz Halloween!</title>
-    <!-- Estilos directamente dentro del HTML -->
     <style>
       body {
         font-family: 'Arial', sans-serif;
@@ -40,11 +39,12 @@
     <!-- Video con borde decorativo -->
     <video width="600" controls>
       <source src="happyhalloweenpng.mp4" type="video/mp4">
-      Tu navegador no soporta la reproducción de videos.
+      Tu navegador no soporta la reproducción de videos. ¡Feliz Halloween!
     </video>
 
-     <src source src="manzana.jpeg">
-    
+    <!-- Imagen con descripción -->
+    <img src="manzana.jpeg" alt="Imagen de manzana" width="300">
+
     <!-- JavaScript para mostrar la hora actual en formato español -->
     <script>
       function updateTime() {
