--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -45,7 +45,7 @@
 
     <!-- Contenedor con estilos de borde para el iframe -->
     <div class="video-container">
-      <iframe width="600" height="400" src="https://www.youtube.com/embed/71VMMJCOuys" frameborder="0" allowfullscreen></iframe>
+      <iframe width="600" height="400" src="https://www.youtube.com/embed/71VMMJCOuys?playlist=71VMMJCOuys&loop=1" frameborder="0" allowfullscreen></iframe>
     </div>
 
     <!-- JavaScript para mostrar la hora actual en formato español -->
