--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
 # jaquiyt.github.io
-#<p>
-#  Haz clic en <a href="Feliz_halloween.html" target="_blank">este enlace</a> para abrir el archivo en una nueva pestaña.
-#</p>
+<p>
+  Video de <a href="Feliz_halloween.html" target="_blank">Halloween</a>
+</p>
