--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -60,5 +60,8 @@
       setInterval(updateTime, 1000);
       updateTime(); // Llamar de inmediato al cargar la página
     </script>
+     <h2>
+       <a href="index.html" target="_blank">Pagina principal</a>
+     </h2>
   </body>
 </html>
