--- a/index.html
+++ b/index.html
@@ -1,4 +1,9 @@
 # jaquiyt.github.io
+<style>
+  p{
+    color: red;
+  }
+</style>
 <p>
-  Video de <a href="Feliz_halloween.html" target="_blank">Halloween</a>
+  Video de <a href="Feliz_halloween.html" target="_blank" style="color: orange;">Halloween</a>
 </p>
