--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
 # jaquiyt.github.io
-<style>
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <style>
   p{
     color: red;
   }
 </style>
+</head>
+
 <p>
   Video de <a href="Feliz_halloween.html" target="_blank" style="color: orange;">Halloween</a>
 </p>
