--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -18,6 +18,7 @@
         font-size: 48px;
         margin-bottom: 20px;
         text-shadow: 2px 2px 5px black;
+        text-align: center;
       }
 
       #currentTime {
