--- a/Feliz_halloween.html
+++ b/Feliz_halloween.html
@@ -28,16 +28,20 @@
 
       /* Estilos para el contenedor del iframe */
       .video-container {
-        display: inline-block;
-        border: 5px solid orange;
-        border-radius: 10px;
-        padding: 5px; /* Espacio entre iframe y borde */
-        box-shadow: 0 0 15px rgba(255, 165, 0, 0.7);
+          display: inline-block;
+          max-width: 95%; /* Limita el ancho máximo al 100% del contenedor */
+          border: 5px solid orange;
+          border-radius: 10px;
+          padding: 5px;
+          box-shadow: 0 0 15px rgba(255, 165, 0, 0.7);
+      }
+      
+      iframe {
+          width: 95%; /* Asegura que el video ocupe el 100% del ancho del contenedor */
+          height: auto; /* Mantiene la relación de aspecto del video */
+          border-radius: 10px;
       }
 
-      iframe {
-        border-radius: 10px;
-      }
     </style>
   </head>
   <body>
