--- a/buenasnoches.html
+++ b/buenasnoches.html
@@ -2,6 +2,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Holaa</title>
+  <style>
+    h1{
+      color: "#efb810";
+    }
+  </style>
 </head>
 <body>
   <h1>
