--- a/buenasnoches.html
+++ b/buenasnoches.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
+<html lang="es">
 <head>
   <meta charset="UTF-8">
   <title>Holaa</title>
   <style>
-    h1{
-      color: "#efb810";
+    h1 {
+      color: #efb810; /* Sin comillas */
     }
   </style>
 </head>
@@ -13,3 +14,4 @@
     Buenas noches preciosa
   </h1>
 </body>
+</html>
