--- a/index.html
+++ b/index.html
@@ -14,5 +14,5 @@
 </p>
 
 <p>
-  <a href="buenas_noches.html" target="_blank" style="color: dark_blue;">Buenas noches</a>
+  Web para desear <a href="buenas_noches.html" target="_blank" style="color: dark_blue;">Buenas noches</a>
 </p>
