--- a/buenas_noches.html
+++ b/buenas_noches.html
@@ -2,7 +2,7 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8">
-  <title>Holaa</title>
+  <title>Buenas noches</title>
 
   <!-- Enlace a Google Fonts -->
   <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&display=swap" rel="stylesheet">
