--- a/buenas_noches.html
+++ b/buenas_noches.html
@@ -47,7 +47,7 @@
 </head>
 <body>
   <h1>
-    Buenas noches preciosa
+    Buenas noches
   </h1>
 
   <!-- Script para un mensaje interactivo al hacer clic en el título -->
