--- a/Feliz_navidad.html
+++ b/Feliz_navidad.html
@@ -11,7 +11,7 @@
   /* Fondo de degradado navideño */
   background: linear-gradient(135deg, #FF0000, #FFD700, #006400);
   /* El 135deg define el ángulo del degradado */
-  height: 100%; /* Para que ocupe toda la altura de la pantalla */
+  height: 100vh; /* Para que ocupe toda la altura de la pantalla */
   margin: 0;
 }
 
