--- a/Feliz_navidad.html
+++ b/Feliz_navidad.html
@@ -5,11 +5,11 @@
   <title>¡¡Feliz Navidad!!</title>
   <style>
     h1 {
-      color: #efb810;
+      color: #ffffff;
     }
     body {
   /* Fondo de degradado navideño */
-  background: linear-gradient(135deg, #FF0000, #FFD700, #006400);
+  background: linear-gradient(150deg, #FF0000, #FFD700, #006400);
   /* El 135deg define el ángulo del degradado */
   height: 100vh; /* Para que ocupe toda la altura de la pantalla */
   margin: 0;
