--- a/Feliz_navidad.html
+++ b/Feliz_navidad.html
@@ -6,6 +6,9 @@
   <style>
     h1 {
       color: #ffffff;
+      margin-left: auto
+      margin-right: auto
+}
     }
     body {
   /* Fondo de degradado navideño */
