--- a/index.html
+++ b/index.html
@@ -13,6 +13,15 @@
   Video de <a href="Feliz_halloween.html" target="_blank" style="color: orange;">Halloween</a>
 </p>
 
+<p backgroundcolor: green;>
+  Video de <a href="Feliz_navidad.html" target="_blank" style="color: red;">Navidad/a>
+</p>
+
+<p>
+  Web para desear <a href="felicidades.html" target="_blank" style="color: dark_blue;">Feliz cumpleaños</a>
+</p>
+
+
 <p>
   Web para desear <a href="buenas_noches.html" target="_blank" style="color: dark_blue;">Buenas noches</a>
 </p>
