--- a/index.html
+++ b/index.html
@@ -3,18 +3,24 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  p{
+  red.{
     color: red;
+  }
+  green.{
+    color: green;
+  }
+  blue.{
+    coor: blue;  
   }
 </style>
 </head>
 
-<p>
+<p id=red>
   Video de <a href="Feliz_halloween.html" target="_blank" style="color: orange;">Halloween</a>
 </p>
 
-<p backgroundcolor: green;>
-  Video de <a href="Feliz_navidad.html" target="_blank" style="color: red;">Navidad/a>
+<p id=green>
+  Video de <a href="Feliz_navidad.html" target="_blank" style="color: red;">Navidad</a>
 </p>
 
 <p>
@@ -22,6 +28,6 @@
 </p>
 
 
-<p>
+<p id=blue>
   Web para desear <a href="buenas_noches.html" target="_blank" style="color: dark_blue;">Buenas noches</a>
 </p>
