--- a/Feliz_navidad.html
+++ b/Feliz_navidad.html
@@ -6,8 +6,12 @@
   <style>
     h1 {
       color: #ffffff;
-      margin-left: auto
-      margin-right: auto
+      margin-left: 33%;
+      margin-right: 33%;
+      text-size-adjust: 30px;
+    div {
+      margin-top: 20%;
+    }
 }
     body {
     /* Fondo de degradado navideño */
@@ -20,8 +24,10 @@
   </style>
 </head>
 <body>
-  <h1>
-    🎄☃️🎄¡¡Feliz Navidad!! ☃️🎄☃️
-  </h1>
+  <div>
+    <h1>
+      🎄☃️🎄¡¡Feliz Navidad!! ☃️🎄☃️
+    </h1>
+  </div>
 </body>
 </html>  
