--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
-  red.{
+  #red{
     color: red;
   }
-  green.{
+  #green{
     color: green;
   }
-  blue.{
+  #blue{
     coor: blue;  
   }
 </style>
