--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -2,10 +2,15 @@
 <html dir="ltr" lang="ca" class="focus-outline-visible" lazy-loaded="true">
   <head>
     <meta charset="utf-8">
-    <title>Pestanya nova</title>
+    <title>Kebab Bomba</title>
+    <style>
+      .red{
+        color: red;
+      }
+    </style>
   </head>
   <body>
-    <h1>
+    <h1 id=red>
       KEBAB BOMBA
     </h1>
     <p>
