--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <title>Kebab Bomba</title>
     <style>
-      .red{
+      #red{
         color: red;
       }
     </style>
