--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -7,13 +7,46 @@
       #red{
         color: red;
       }
+      #centrado{
+      text-align: center;
+    }
     </style>
   </head>
   <body>
-    <h1 id=red>
-      KEBAB BOMBA
-    </h1>
-    <p>
-      Una explosion de sabores
-    </p>
+    <div id="centrado">
+        <h1 id=red>
+            KEBAB BOMBA
+          </h1>
+          <h3>
+              *logo*
+          </h3>
+          <p>
+              ¡Una <span style="color: red;">EXPLOSIÓN</span> de sabores!
+          </p>  
+    </div>
+    <div id="Menú">
+        <h2>
+            Algunas opciones para elegir:
+        </h2>
+
+        <h3>
+            *Foto* "C4" 
+        </h3>
+
+        <h3>
+            *Foto* "Granadas" (Doble)
+        </h3>
+
+        <h3>
+            *Foto* "Bomba radioactiva" (Kebeb con salsa picante)
+        </h3>
+
+        <p>
+            Todos los menus se pueden personalizar y vienen con bebida y salsas* y por +0,30€ unas patatas fritas.
+        </p> 
+        <p>
+            <span style="font-weight: bold;">Salsas*</span> La salsa picante es <span style="font-weight: bold;">únicamente</span> para el menú <span style="font-weight: bold; font-style: italic;">'Bomba radioactiva'</span>.
+          </p>          
+
+    </div>
   </body>
