--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -10,6 +10,9 @@
       #centrado{
       text-align: center;
     }
+      body{
+        color: #ebd9cb;
+      }
     </style>
   </head>
   <body>
