--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -11,7 +11,7 @@
       text-align: center;
     }
       body{
-        background-color: #ebd9cb;
+        background-color: #c19364;
       }
       h3{
         color: green;
