--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -35,6 +35,7 @@
             Algunas opciones para elegir:
         </h2>
 
+        <img src="./C4.jpeg">
         <h3>
             *Foto* "C4" 
         </h3>
