--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -16,6 +16,11 @@
       h3{
         color: green;
       }
+      #plato{
+        height: 300px;
+        weight: 300px;
+      }
+      
     </style>
   </head>
   <body>
@@ -23,9 +28,9 @@
         <h1 id=red>
             KEBAB BOMBA
           </h1>
-          <h3>
-              *logo*
-          </h3>
+          <div id=logo>
+            <img src="./kebabbomba.png">
+          </div>
           <p>
               ¡Una <span style="color: red;">EXPLOSIÓN</span> de sabores!
           </p>  
@@ -35,11 +40,12 @@
             Algunas opciones para elegir:
         </h2>
 
-        <img src="./C4.jpeg">
         <h3>
-            *Foto* "C4" 
+            "C4" 
         </h3>
-
+      <div id=plato>
+        <img src="./C4.jpeg">
+      </div>
         <h3>
             *Foto* "Granadas" (Doble)
         </h3>
