--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -47,9 +47,11 @@
         <img src="./C4.jpeg">
       </div>
         <h3>
-            *Foto* "Granadas" (Doble)
+          "Granadas" (Doble)
         </h3>
-
+      <div id=plato>
+        <img src="./granadaskebab.jpeg">
+      </div>
         <h3>
             *Foto* "Bomba radioactiva" (Kebeb con salsa picante)
         </h3>
