--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -51,7 +51,7 @@
           "Granadas" (Doble)
         </h3>
       <div id=plato>
-        <img src="./granadaskebab.jpeg">
+        <img src="./granadas_kebab.jpeg">
       </div>
         <h3>
             *Foto* "Bomba radioactiva" (Kebeb con salsa picante)
