--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -46,13 +46,13 @@
         <h2>Algunas opciones para elegir:</h2>
 
         <div class="menu-section">
-            <h3>"C4"</h3>
-            <img id="plato" src="./C4.jpeg" alt="C4 Kebab">
+            <h3>"BAMBOM"</h3>
+            <img id="plato" src="./bambom.jpg" alt="bambom Kebab">
         </div>
 
         <div class="menu-section">
             <h3>"Granadas" (Doble)</h3>
-            <img id="plato" src="./granadaskebab.jpeg" alt="Granadas Kebab">
+            <img id="plato" src="./granadaskebab.jpg" alt="Granadas Kebab">
         </div>
 
         <div class="menu-section">
