--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -51,8 +51,8 @@
         </div>
 
         <div class="menu-section">
-            <h3>"Granadas" (Doble)</h3>
-            <img id="plato" src="./granadaskebab.jpg" alt="Granadas Kebab">
+            <h3>"Doble boom!" (menú doble)</h3>
+            <img id="plato" src="./dobleboom.jpeg" alt="Doble boom!">
         </div>
 
         <div class="menu-section">
