--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -56,10 +56,15 @@
         </div>
 
         <div class="menu-section">
-            <h3>Bomba radioactiva (Kebab con salsa picante)</h3>
+            <h3>Explosion de pita (Kebab con salsa picante)</h3>
             <img id="plato" src="./bombaradioactiva.jpeg" alt="Bomba Radioactiva Kebab">
         </div>
 
+        <div class="menu-section">
+            <h3>Kebab boss (Kebab con extra de vegetales)</h3>
+            <img id="plato" src="./bombaradioactiva.jpeg" alt="Bomba Radioactiva Kebab">
+        </div>
+        
         <p>Todos los menús se pueden personalizar y vienen con bebida y salsas. Por solo +0,30€, puedes añadir patatas fritas.</p>
         <p>
             <strong>Salsas:</strong> La salsa picante es 
