--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -37,7 +37,7 @@
     <div id="centrado">
         <h1 id="red">KEBAB BOMBA</h1>
         <div id="logo">
-            <img src="./kebabbomba.png" alt="Kebab Bomba Logo">
+            <img src="./logo300x300.png" alt="Kebab Bomba Logo">
         </div>
         <p>¡Una <span style="color: red;">EXPLOSIÓN</span> de sabores!</p>  
     </div>
@@ -57,12 +57,12 @@
 
         <div class="menu-section">
             <h3>Explosion de pita (Kebab con salsa picante)</h3>
-            <img id="plato" src="./bombaradioactiva.jpeg" alt="Bomba Radioactiva Kebab">
+            <img id="plato" src="./esplosionpita.jpeg" alt="Bomba Radioactiva Kebab">
         </div>
 
         <div class="menu-section">
-            <h3>Kebab boss (Kebab con extra de vegetales)</h3>
-            <img id="plato" src="./bombaradioactiva.jpeg" alt="Bomba Radioactiva Kebab">
+            <h3>Kebab booss (Kebab con extra de vegetales)</h3>
+            <img id="plato" src="./kebabbooss.jpeg" alt="Kebab Booss">
         </div>
         
         <p>Todos los menús se pueden personalizar y vienen con bebida y salsas. Por solo +0,30€, puedes añadir patatas fritas.</p>
