--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -57,7 +57,7 @@
 
         <div class="menu-section">
             <h3>Explosion de pita (Kebab con salsa picante)</h3>
-            <img id="plato" src="./esplosionpita.jpeg" alt="Bomba Radioactiva Kebab">
+            <img id="plato" src="./explosionpita.jpeg" alt="Bomba Radioactiva Kebab">
         </div>
 
         <div class="menu-section">
