--- a/kebabbomba.html
+++ b/kebabbomba.html
@@ -56,7 +56,7 @@
         </div>
 
         <div class="menu-section">
-            <h3>Explosion de pita (Kebab con salsa picante)</h3>
+            <h3>Explosión de pita (Kebab con salsa picante)</h3>
             <img id="plato" src="./explosionpita.jpeg" alt="Bomba Radioactiva Kebab">
         </div>
 
@@ -69,7 +69,7 @@
         <p>
             <strong>Salsas:</strong> La salsa picante es 
             <strong style="color: red; font-style: italic;">únicamente</strong> 
-            para el menú <span style="font-weight: bold; font-style: italic; color: red;">Bomba radioactiva</span>.
+            para el menú <span style="font-weight: bold; font-style: italic; color: red;">Explosión de pita</span>.
         </p>
     </div>
 </body>
